Fixed edit screen z-index for the frame

--- a/frontend/src/components/Blocks/VimeoBlock/css/vimeoblock.less
+++ b/frontend/src/components/Blocks/VimeoBlock/css/vimeoblock.less
@@ -1,33 +1,38 @@
-.view-viewview{
-  #vimeo-block {
+
+#vimeo-block {
+position: relative;
+max-height: 720px;
+width: 100vw;
+overflow: hidden;
+right: 50%;
+left: 50%;
+margin-right: -50vw !important;
+margin-left: -50vw !important;
+@media (min-width: 1640px){
+  max-height: 1000px;;
+}
+}
+
+#vimeo-block .video-wrapper {
   position: relative;
-  max-height: 720px;
-  width: 100vw;
-  overflow: hidden;
-  right: 50%;
-  left: 50%;
-  margin-right: -50vw !important;
-  margin-left: -50vw !important;
-  @media (min-width: 1640px){
-    max-height: 1000px;;
+  padding-bottom: 56.25%;
+  /* 16:9 Aspect Ratio */
+  height: 0;
+}
+
+#vimeo-block iframe {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.view-editview{
+  #vimeo-block iframe{
+    z-index: -1;
   }
 }
 
-  #vimeo-block .video-wrapper {
-    position: relative;
-    padding-bottom: 56.25%;
-    /* 16:9 Aspect Ratio */
-    height: 0;
-  }
-
-  #vimeo-block iframe {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
 
 .vimeo-buttons {
   position: absolute;
